# driftor

./: .env.example  .gitignore  Dockerfile  INSTALLATION_TROUBLESHOOTING.md  LOCAL_TESTING_GUIDE.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  TESTING_README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  fix_alembic.sh  fix_python_env.sh  requirements-flexible.txt  requirements.txt  setup.py  setup_local_env.sh  start_driftor.sh  test_config.py
Desktop/founder-matchmaker/: DEPLOYMENT.md  README.md  package-lock.json  package.json
Desktop/founder-matchmaker/prisma/: rls-policies.sql  schema.prisma  seed.ts
Desktop/founder-matchmaker/src/: middleware.ts
Desktop/one-day/HELPA/: HELPA statistics.xlsx  ~$HELPA statistics.xlsx
Desktop/one-day/driftor_v2/: .env  .env.backup  .env.example  .env.local  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Desktop/one-day/driftor_v2/database/: init.sql
Desktop/one-day/driftor_v2/driftor/agents/nodes/: doc_retrieval.py  ticket_analyzer.py
Desktop/one-day/driftor_v2/driftor/core/: config.py  rate_limiter.py
Desktop/one-day/driftor_v2/driftor/integrations/: base.py
Desktop/one-day/driftor_v2/driftor/integrations/git/: gitea.py  github.py
Desktop/one-day/driftor_v2/driftor/integrations/jira/: webhooks.py
Desktop/one-day/driftor_v2/driftor/integrations/llm/: __init__.py  factory.py
Desktop/one-day/driftor_v2/driftor/integrations/messaging/: base.py
Desktop/one-day/driftor_v2/driftor/integrations/vector_db/: __init__.py  base.py  factory.py
Desktop/one-day/driftor_v2/driftor/models/: tenant.py
Desktop/one-day/driftor_v2/driftor/security/: encryption.py  retention.py
Desktop/one-day/driftor_v2/scripts/: verify_implementation.py
alembic/: env.py
alembic/versions/: 329c7eee936b_initial_migration.py
app/: main.py
app/core/: config.py  database.py  logging.py
app/models/: __init__.py  integration.py  project_mapping.py  ticket.py  user.py
app/schemas/: __init__.py  health.py  integration.py  project_mapping.py  ticket.py  user.py
app/tasks/: __init__.py  celery_app.py  project_mapping.py  ticket_analysis.py
app/templates/: base.html
app/web/: onboarding.py
driftor/: main.py
driftor/agents/: graph.py
driftor/core/: auth.py  database.py
driftor/models/: base.py
driftor/security/: audit.py
scripts/: create_test_data.py  test_api.py
(+62 files in other folders)
